--- a/Frontend/src/locales/th.json
+++ b/Frontend/src/locales/th.json
@@ -12,32 +12,96 @@
     "Total_users": "จำนวนผู้ใช้ทั้งหมด"
   },
   "UserTab": {
-    "Text": {
-      "Total": "รวม",
-      "AddUser": "เพิ่มผู้ใช้ใหม่"
-    },
-    "Header": {
-      "Username": "ชื่อผู้ใช้",
-      "Profile": "โปรไฟล์",
-      "Role": "บทบาท",
-      "Action": "การดำเนินการ",
-      "Remove": "ลบ"
-    },
-    "Buttons": {
-      "Restrict": "จำกัด",
-      "Unrestrict": "ยกเลิกการจำกัด",
-      "Cancel": "ยกเลิก",
-      "Confirm": "ยืนยัน"
-    },
-    "Description": {
-      "Des1": "คุณแน่ใจแน่นอนมั้ย?",
-      "Des2": "การดำเนินการนี้จะป้องกันไม่ให้ผู้ใช้เข้าถึงฟีเจอร์บางอย่าง คุณจะสามารถเลิกทำการดำเนินการนี้ได้โดยการแทรกแซงจากผู้ดูแลระบบเพิ่มเติม.",
-      "Des3": "การดำเนินการนี้จะลบผู้ใช้ออกจากเซิร์ฟเวอร์ คุณจะไม่สามารถเลิกทำการดำเนินการนี้ได้ด้วยการแทรกแซงจากฝ่ายบริหารเพิ่มเติม",
-      "Des4": "รายชื่อผู้ใช้"
-    },
-    "Role": {
-      "user": "ผู้ใช้",
-      "admin": "ผู้ดูแลระบบ"
-    }
+  "Text": {
+    "Total": "รวม",
+    "AddUser": "เพิ่มผู้ใช้ใหม่"
+  },
+  "Header": {
+    "Username": "ชื่อผู้ใช้",
+    "Profile": "โปรไฟล์",
+    "Role": "บทบาท",
+    "Action": "การดำเนินการ",
+    "Remove": "ลบ"
+  },
+  "Buttons": {
+    "Restrict": "จำกัด",
+    "Unrestrict": "ยกเลิกการจำกัด",
+    "Cancel": "ยกเลิก",
+    "Confirm": "ยืนยัน"
+  },
+  "Description": {
+    "Des1": "คุณแน่ใจหรือไม่?",
+    "Des2": "การดำเนินการนี้จะป้องกันไม่ให้ผู้ใช้เข้าถึงฟีเจอร์บางอย่าง คุณสามารถเลิกทำการดำเนินการนี้ได้โดยการให้ผู้ดูแลระบบเข้าแทรกแซง",
+    "Des3": "การดำเนินการนี้จะลบผู้ใช้ออกจากเซิร์ฟเวอร์ และคุณจะไม่สามารถกู้คืนข้อมูลนี้ได้แม้จะให้ผู้ดูแลระบบเข้าแทรกแซง",
+    "Des4": "รายชื่อผู้ใช้"
+  },
+  "Role": {
+    "user": "ผู้ใช้",
+    "admin": "ผู้ดูแลระบบ"
   }
+},
+"Courses": {
+  "Text": {
+    "Course_management": "การจัดการคอร์สเรียน",
+    "Courses": "คอร์สเรียน"
+  },
+  "Buttons": {
+    "Create_New_Courses": "สร้างคอร์สใหม่",
+    "Total_courses": "คอร์สทั้งหมด",
+    "All_courses": "คอร์สทั้งหมด",
+    "Completed": "เสร็จสิ้น",
+    "Draft": "ฉบับร่าง",
+    "Previous": "ก่อนหน้า",
+    "Next": "ถัดไป",
+    "Search_Courses": "ค้นหารายวิชา"
+  },
+  "Columns": {
+    "courses": "คอร์สเรียน",
+    "Thumbnails": "รูปตัวอย่าง",
+    "Category": "หมวดหมู่",
+    "Status": "สถานะ",
+    "Action": "การดำเนินการ",
+    "No_results": "ไม่มีผลลัพธ์"
+  }
+},
+"Users": {
+    "User_course_enrollments": "การลงทะเบียนเรียนของผู้ใช้",
+    "username": "ชื่อผู้ใช้",
+    "course": "คอร์ส",
+    "Category": "หมวดหมู่",
+    "Thumbnail": "รูปตัวอย่าง",
+    "Enrolled_at": "วันที่ลงทะเบียน",
+    "Status": "สถานะ",
+    "Progress": "ความคืบหน้า",
+    "List_of_enrollments": "รายการการลงทะเบียนของผู้ใช้ทั้งหมด"
+},
+"Form": {
+    "create_new_course": "สร้างคอร์สใหม่",
+    "course_title": "ชื่อคอร์ส",
+    "Enter_course_title": "กรอกชื่อคอร์ส",
+    "Category": "หมวดหมู่",
+    "Enter_Category": "กรอกหมวดหมู่",
+    "This_is_your_public_display_name": "นี่คือชื่อที่จะแสดงต่อสาธารณะ",
+    "Provide": "กำหนดหมวดหมู่สำหรับคอร์สนี้",
+    "Description": "คำอธิบาย",
+    "Enter_description": "กรอกรายละเอียดเกี่ยวกับคอร์ส",
+    "This": "เนื้อหานี้จะแสดงต่อสาธารณะ",
+    "Instructor_name": "ชื่อผู้สอน",
+    "instructor": "กรอกชื่อผู้สอน",
+    "Instructor_profile": "โปรไฟล์ผู้สอน",
+    "thumbnail": "นี่จะเป็นรูปภาพหน้าปกของคอร์ส",
+    "About_instructor": "เกี่ยวกับผู้สอน",
+    "Enter_about_instructor": "กรอกรายละเอียดเกี่ยวกับผู้สอน",
+    "learning": "สิ่งที่ผู้เรียนจะได้เรียนรู้",
+    "overview": "ให้ภาพรวมเกี่ยวกับคอร์ส",
+    "Thumbnail": "รูปภาพหน้าปก",
+    "course_thumbnail": "นี่จะเป็นรูปภาพหน้าปกของคอร์ส",
+    "Course_Demo": "วิดีโอตัวอย่างคอร์ส",
+    "upload": "อัปโหลดวิดีโอตัวอย่างสำหรับคอร์สของคุณ",
+    "Next": "ถัดไป",
+    "create": "กำลังสร้าง"
+}
+
+
+
 }
