--- a/Frontend/src/locales/th.json
+++ b/Frontend/src/locales/th.json
@@ -56,12 +56,13 @@
       "Search_Courses": "ค้นหารายวิชา"
     },
     "Columns": {
-      "courses": "คอร์สเรียน",
+      "Courses": "คอร์สเรียน",
       "Thumbnails": "รูปตัวอย่าง",
       "Category": "หมวดหมู่",
       "Status": "สถานะ",
       "Action": "การดำเนินการ",
-      "No_results": "ไม่มีผลลัพธ์"
+      "No_results": "ไม่มีผลลัพธ์",
+      "Search_courses": "ค้นหาหลักสูตร"
     }
   },
   "Users": {
@@ -126,8 +127,8 @@
       "From_Clients": "ที่เราได้รับจากลูกค้าของเรา",
       "Popular_Courses": "คอร์สยอดนิยม",
       "Popular_Courses_Desc": "สำรวจหลักสูตรยอดนิยมของเรา เตรียมตัวให้พร้อมสำหรับอาชีพที่เป็นที่ต้องการ",
-      "View_All": "ดูทั้งหมด","No_Popular_Courses_Found": "ไม่พบคอร์สยอดนิยม!!!"
-
+      "View_All": "ดูทั้งหมด",
+      "No_Popular_Courses_Found": "ไม่พบคอร์สยอดนิยม!!!"
     },
     "Services": {
       "personalizedLearning": {
@@ -148,14 +149,14 @@
       }
     },
     "aboutUs": {
-    "title": "เกี่ยวกับเรา",
-    "pageTitle": "เกี่ยวกับเรา",
-    "unlockYourPotential": "ปลดล็อกศักยภาพของคุณ: เรียนรู้ สร้าง และเติบโต",
-    "description": "เสริมพลังให้ตัวเองด้วยทักษะและความรู้ที่คุณต้องการเพื่อประสบความสำเร็จ ดำดิ่งสู่ประสบการณ์การเรียนรู้ที่เน้นการปฏิบัติและบรรลุเป้าหมายทั้งส่วนตัวและอาชีพด้วยความมั่นใจ",
-    "ourMission": "ภารกิจของเรา",
-    "missionDescription": "เสริมพลังให้ตัวเองด้วยทักษะและความรู้ที่คุณต้องการเพื่อประสบความสำเร็จ ดำดิ่งสู่ประสบการณ์การเรียนรู้ที่เน้นการปฏิบัติและบรรลุเป้าหมายทั้งส่วนตัวและอาชีพด้วยความมั่นใจ",
-    "journeyMessage": "\"การเดินทางสู่การเติบโตของคุณเริ่มต้นที่นี่ มาร่วมสร้างอนาคตไปด้วยกัน\"",
-    "startLearningButton": "เริ่มเรียนรู้ตอนนี้!"
-  }
+      "title": "เกี่ยวกับเรา",
+      "pageTitle": "เกี่ยวกับเรา",
+      "unlockYourPotential": "ปลดล็อกศักยภาพของคุณ: เรียนรู้ สร้าง และเติบโต",
+      "description": "เสริมพลังให้ตัวเองด้วยทักษะและความรู้ที่คุณต้องการเพื่อประสบความสำเร็จ ดำดิ่งสู่ประสบการณ์การเรียนรู้ที่เน้นการปฏิบัติและบรรลุเป้าหมายทั้งส่วนตัวและอาชีพด้วยความมั่นใจ",
+      "ourMission": "ภารกิจของเรา",
+      "missionDescription": "เสริมพลังให้ตัวเองด้วยทักษะและความรู้ที่คุณต้องการเพื่อประสบความสำเร็จ ดำดิ่งสู่ประสบการณ์การเรียนรู้ที่เน้นการปฏิบัติและบรรลุเป้าหมายทั้งส่วนตัวและอาชีพด้วยความมั่นใจ",
+      "journeyMessage": "\"การเดินทางสู่การเติบโตของคุณเริ่มต้นที่นี่ มาร่วมสร้างอนาคตไปด้วยกัน\"",
+      "startLearningButton": "เริ่มเรียนรู้ตอนนี้!"
+    }
   }
 }
