--- a/Frontend/src/locales/th.json
+++ b/Frontend/src/locales/th.json
@@ -157,6 +157,17 @@
       "missionDescription": "เสริมพลังให้ตัวเองด้วยทักษะและความรู้ที่คุณต้องการเพื่อประสบความสำเร็จ ดำดิ่งสู่ประสบการณ์การเรียนรู้ที่เน้นการปฏิบัติและบรรลุเป้าหมายทั้งส่วนตัวและอาชีพด้วยความมั่นใจ",
       "journeyMessage": "\"การเดินทางสู่การเติบโตของคุณเริ่มต้นที่นี่ มาร่วมสร้างอนาคตไปด้วยกัน\"",
       "startLearningButton": "เริ่มเรียนรู้ตอนนี้!"
+    },
+    "explore": {
+      "unlock": "ปลดล็อกศักยภาพของคุณด้วย",
+      "doitung": "ดอยตุง",
+      "explore_our": "สำรวจหลักสูตรที่คัดสรรมาเพื่อสร้างแรงบันดาลใจ ให้ความรู้ และเสริมศักยภาพของคุณ",
+      "search": "ค้นหาหลักสูตร",
+      "all_courses": "หลักสูตรทั้งหมด",
+      "popular_courses": "หลักสูตรยอดนิยม",
+      "no_results": "ไม่พบผลลัพธ์",
+      "next": "ถัดไป",
+      "previous": "ก่อนหน้า"
     }
   }
 }
