--- a/Frontend/src/locales/th.json
+++ b/Frontend/src/locales/th.json
@@ -166,8 +166,39 @@
       "all_courses": "หลักสูตรทั้งหมด",
       "popular_courses": "หลักสูตรยอดนิยม",
       "no_results": "ไม่พบผลลัพธ์",
-      "next": "ถัดไป",
-      "previous": "ก่อนหน้า"
+      "next": "ถัดไป","rating": "คะแนน -",
+      "previous": "ก่อนหน้า","check_course": "ตรวจสอบหลักสูตร"
+
     }
+  },
+  "overview": {
+    "rate": "ให้คะแนนคอร์สนี้",
+    "enrolled": "ลงทะเบียนแล้ว",
+    "enrolling": "กำลังลงทะเบียน...",
+    "enrollnow": "ลงทะเบียนเลย",
+
+    "instructor": "ผู้สอน",
+    "sure": "คุณแน่ใจหรือไม่?",
+    "action_undone": "การดำเนินการนี้ไม่สามารถย้อนกลับได้ การลงทะเบียนนี้จะถูกบันทึกลงในบัญชีของคุณอย่างถาวร",
+    "cancel": "ยกเลิก",
+    "Continue": "ดำเนินการต่อ",
+    "Save_watch": "บันทึกไว้ดูภายหลัง",
+    "continue_learning": "เรียนต่อต่อไป",
+    "module_series": "ชุดโมดูล",
+    "earn_career": "รับใบรับรองอาชีพที่แสดงถึงความเชี่ยวชาญของคุณ",
+    "Rating": "คะแนน",
+    "user_reviews": "รีวิว",
+    "lecture_videos": "วิดีโอบรรยาย",
+    "quizzes": "แบบทดสอบ",
+    "flexible": "ตารางเรียนที่ยืดหยุ่น",
+    "learn_own": "เรียนได้ตามจังหวะของคุณเอง","learning_progress": "ความคืบหน้าการเรียน",
+"of": "จาก",
+"activities_completed": "กิจกรรมที่ทำเสร็จแล้ว","what_learn": "สิ่งที่คุณจะได้เรียนรู้",
+"course_demo": "ตัวอย่างคอร์ส :","course_outline": "โครงร่างคอร์ส",
+"total_modules": "จำนวนโมดูลทั้งหมด","reviews_rating": "รีวิวและคะแนน"
+
+
+
+
   }
 }
