--- a/Frontend/src/locales/th.json
+++ b/Frontend/src/locales/th.json
@@ -104,7 +104,10 @@
   },
   "Home": {
     "Hero": {
-      "unlock": "ปลดล็อกศักยภาพของคุณ:",
+      "Unlock": "ปลดล็อค",
+      "New_Potential": "ศักยภาพใหม่",
+
+      "Everywhere": "ทุกที่",
 
       "learn": "เรียนรู้, สร้างสรรค์ และเติบโต",
 
@@ -273,5 +276,10 @@
 
     "saved_courses": "หลักสูตรที่บันทึกไว้ -",
     "no_courses": "ไม่พบผลลัพธ์"
+  },
+  "nav": {
+    "Home": "หน้าแรก",
+    "About": "เกี่ยวกับเรา",
+    "Courses": "หลักสูตร"
   }
 }
